--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <div id="container">
     <h1><span><i>欢迎来到我的网站</i></span></h1>
     <p>
-        记录我的第一年大学，一起来瞧一瞧吧
+        记录我的大学第一年，一起来瞧一瞧吧
     </p>
-    <a href="index.html">
+    <a href="myinformation.html">
         <div id="enter">
             了解更多
         </div>
