--- a/myinformation.html
+++ b/myinformation.html
@@ -16,5 +16,33 @@
     <li><a href="experience.html">心得</a></li>
     <li><a href="about.html">关于</a></li>
 </ul>
+<!--父盒子-->
+<div class="flex">
+    <!--    左边人物盒子-->
+    <div id="touxiang">
+        <img src="images/myhead.png" style="height: 200px;width: 200px " alt="myhead">
+        <h1>喻君杰</h1>
+        <h2>学校：中南民族大学</h2>
+        <h2>籍贯：湖北省荆州市</h2>
+    </div>
+    <!--    右边内容盒子-->
+    <div id="youneirong">
+        <h1><span>一个极客Geek、赛博、宅、爱折腾的大学生</span></h1>
+        <div id="dadge">
+            <div class="xiaogezi"></div>
+            <div class="xiaogezi"></div>
+            <div class="xiaogezi">
+                <span class="xiaobiaoti">最爱的食物</span>
+                <div class="xiaoneirong">
+                    ·饮料
+                </div>
+            </div>
+            <div class="xiaogezi"></div>
+        </div>
+        <a href="learn.html">
+            <div class="butt">进入学习</div>
+        </a>
+    </div>
+</div>
 </body>
 </html>
