--- a/myinformation.html
+++ b/myinformation.html
@@ -20,27 +20,59 @@
 <div class="flex">
     <!--    左边人物盒子-->
     <div id="touxiang">
-        <img src="images/myhead.png" style="height: 200px;width: 200px " alt="myhead">
+        <img src="images/myhead.png" style="height: 34%;width: 100% " alt="myhead">
         <h1>喻君杰</h1>
-        <h2>学校：中南民族大学</h2>
-        <h2>籍贯：湖北省荆州市</h2>
+        <h2>🎓学校：中南民族大学</h2>
+        <h2>🏠籍贯：湖北省荆州市</h2>
     </div>
     <!--    右边内容盒子-->
     <div id="youneirong">
         <h1><span>一个极客Geek、赛博、宅、爱折腾的大学生</span></h1>
         <div id="dadge">
-            <div class="xiaogezi"></div>
-            <div class="xiaogezi"></div>
             <div class="xiaogezi">
                 <span class="xiaobiaoti">最爱的食物</span>
-                <div class="xiaoneirong">
-                    ·饮料
+            </div>
+            <div class="xiaogezi">
+                <span class="xiaobiaoti">业余小爱好</span>
+                <hr>
+                <div>
+                    <span class="xiaoneirong">💻计算机：</span>Code、硬件、软件<br>
+                    <span class="xiaoneirong">📚书籍：</span>人物传记、专业书<br>
+                    <span class="xiaoneirong">🍡零食：</span>冰淇淋、巧克力
+                    <hr>
+                    <p>
+                        😋 想多尝一尝地方美食
+                    </p>
                 </div>
             </div>
-            <div class="xiaogezi"></div>
+            <div class="xiaogezi">
+                <span class="xiaobiaoti">最爱的食物</span>
+                <hr>
+                <div>
+                    <span class="xiaoneirong">🍹饮料：</span>☕咖啡、红酒<br>
+                    <span class="xiaoneirong">🍚主食：</span>面条、炖汤<br>
+                    <span class="xiaoneirong">🍡零食：</span>冰淇淋、巧克力
+                    <hr>
+                    <p>
+                        😋 想多尝一尝地方美食
+                    </p>
+                </div>
+
+            </div>
+            <div class="xiaogezi">
+                <span class="xiaobiaoti">联系方式</span>
+                <hr>
+                <div>
+                    <span class="xiaoneirong">💌E-mail：</span>linkuandmyu@163.com<br>
+                    <span class="xiaoneirong">📞Tel：</span>13972430185<br>
+                    <span class="xiaoneirong">⭐GitHub：</span><a href="https://github.com/languagege">@languegege</a>
+                </div>
+                <hr>
+                <p>🔍 一起交流学习！</p>
+            </div>
         </div>
         <a href="learn.html">
-            <div class="butt">进入学习</div>
+            <div class="butt">进入学习➡</div>
         </a>
     </div>
 </div>
