--- a/myinformation.html
+++ b/myinformation.html
@@ -20,7 +20,7 @@
 <div class="flex">
     <!--    左边人物盒子-->
     <div id="touxiang">
-        <img src="images/myhead.png" style="height: 34%;width: 100% " alt="myhead">
+        <img src="images/myhead.png" style="height: 200px;width: 200px " alt="myhead">
         <h1>喻君杰</h1>
         <h2>🎓学校：中南民族大学</h2>
         <h2>🏠籍贯：湖北省荆州市</h2>
@@ -30,18 +30,28 @@
         <h1><span>一个极客Geek、赛博、宅、爱折腾的大学生</span></h1>
         <div id="dadge">
             <div class="xiaogezi">
-                <span class="xiaobiaoti">最爱的食物</span>
+                <span class="xiaobiaoti">回顾一年那些事儿</span>
+                <hr>
+                <span class="xiaoneirong">🌝满意：</span><br>
+                ✔️健康、平稳地充分度过第一年<br>
+                ✔️敢于迈出诸多第一步、了解诸多新事物<br>
+                ✔️乐于给予他人帮助
+                <hr>
+                <span class="xiaoneirong">🌚遗憾：</span><br>
+                ❌ 没有好好出去玩过、没有参加好玩社团<br>
+                ❌ 难以静下心来做自己不喜欢的事<br>
+                ❌ 没有参加自己喜欢的比赛<br>
             </div>
             <div class="xiaogezi">
                 <span class="xiaobiaoti">业余小爱好</span>
                 <hr>
                 <div>
-                    <span class="xiaoneirong">💻计算机：</span>Code、硬件、软件<br>
-                    <span class="xiaoneirong">📚书籍：</span>人物传记、专业书<br>
-                    <span class="xiaoneirong">🍡零食：</span>冰淇淋、巧克力
+                    <span class="xiaoneirong">💻计算机：</span>Code、硬件、软件……<br>
+                    <span class="xiaoneirong">📚书籍：</span>人物传记、专业书……<br>
+                    <span class="xiaoneirong">🎮电子游戏：</span>野吹、大表哥、巫师3、马力欧、OW……
                     <hr>
                     <p>
-                        😋 想多尝一尝地方美食
+                        🎻 努力探索其他领域
                     </p>
                 </div>
             </div>
@@ -50,11 +60,11 @@
                 <hr>
                 <div>
                     <span class="xiaoneirong">🍹饮料：</span>☕咖啡、红酒<br>
-                    <span class="xiaoneirong">🍚主食：</span>面条、炖汤<br>
+                    <span class="xiaoneirong">🍚主食：</span>面条、馍<br>
                     <span class="xiaoneirong">🍡零食：</span>冰淇淋、巧克力
                     <hr>
                     <p>
-                        😋 想多尝一尝地方美食
+                        🍛 想多尝一尝地方美食
                     </p>
                 </div>
 
@@ -63,7 +73,7 @@
                 <span class="xiaobiaoti">联系方式</span>
                 <hr>
                 <div>
-                    <span class="xiaoneirong">💌E-mail：</span>linkuandmyu@163.com<br>
+                    <span class="xiaoneirong">📬E-mail：</span>linkuandmyu@163.com<br>
                     <span class="xiaoneirong">📞Tel：</span>13972430185<br>
                     <span class="xiaoneirong">⭐GitHub：</span><a href="https://github.com/languagege">@languegege</a>
                 </div>
@@ -72,7 +82,7 @@
             </div>
         </div>
         <a href="learn.html">
-            <div class="butt">进入学习➡</div>
+            <div class="butt">学习模块➡</div>
         </a>
     </div>
 </div>
