--- a/learn.html
+++ b/learn.html
@@ -15,5 +15,29 @@
     <li><a href="experience.html">心得</a></li>
     <li><a href="about.html">关于</a></li>
 </ul>
+<h1>大学第一年我研读的专业书</h1>
+<div class="flex">
+    <div>
+        <img src="images/cprimer.jpg" alt="CPP">
+    </div>
+    <div class="yougezi">
+        <div class="name">
+            <h2>C Primer Plus ——查漏补缺/针对研读/适合新手扫盲<br>推荐理由：</h2>
+        </div>
+        <div class="rec">
+            <p>
+                我学C语言的第一本书，从去年10月开始学习，看得比较慢（请原谅我很蠢），目前将C语言的语法部分看完了，主要集中在前15章。我的个人评价是：透彻、清晰，简单的一个小知识，可以讲出花。只要肯花时间来细细研读某个章节，一定会受益匪浅。就我个人来说，我认为这本书讲的最最最好的地方是<span
+                    class="jiacu">第10章的数组和指针</span>,读完之后我才发现指针和数组的关系是如此的密切！指针配合数组，可以非常灵活地操作数组中的数据。当时花了一天和一个下午专门研究，才通透，迈过了指针这道坎。我认为这是一个里程碑，后面的知识几乎全部都需要用到指针这一基础，举个例子，指针指向字符串、结构体、甚至是文件（需要文件指针），在后续的数据结构和算法的学习过程中，指针是肯定要用到的，那时候才会感知到指针是多么强大，使用的难度是多么大😂<br>
+                <span class="jiacu">踩过的坑以及书的不足：</span><br>
+                1️⃣这本书<span class="jiacu">实在是太厚了</span>，讲的十分详细，所以不建议大家直接像我一样直接拿起来啃😭，需要好好听课之后，记录自己模糊的地方，课后仔细研读；也可以使用一点魔幻的方法速通一遍C，再来看这本书，收获会更大，更能理解本质（我的情况）。<span
+                    class="jiacu">书上的课后习题，非常适合练手来加深印象</span>。<br>2️⃣不能死磕一个地方，需要针对性地学习，某个小地方很可能是翻译出现问题/印刷错误，掌握核心内容就好啦,多敲一敲代码。<span
+                    class="jiacu">纸上得来终觉浅</span>
+            </p>
+            <p>
+
+            </p>
+        </div>
+    </div>
+</div>
 </body>
 </html>
