--- a/afterclass.html
+++ b/afterclass.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>课后</title>
     <link rel="stylesheet" href="css_sheet/pointer.css">
-    <link rel="stylesheet" href="css_sheet/learn.css">
+    <link rel="stylesheet" href="css_sheet/afclass.css">
 </head>
 <body>
 <ul>
@@ -15,5 +15,64 @@
     <li><a href="experience.html">心得</a></li>
     <li><a href="about.html">关于</a></li>
 </ul>
+<h1>看想看的书、膜拜一下大佬和大公司</h1>
+<div class="bookcon">
+    <div class="book">
+        <h2>硅谷钢铁侠（2021）</h2>
+        <img src="images/mask.jpg" alt="mask">
+    </div>
+    <div class="book">
+        <h2>英特尔传奇：三位一体（2021）</h2>
+        <img src="images/intel.jpg" alt="intel" style="width: 270px;height: 365px">
+    </div>
+    <div class="book">
+        <h2>计算之魂（2022在读）</h2>
+        <img src="images/calculate.jpg" alt="cal">
+    </div>
+</div>
+<h1>玩3A大作:体感/休闲/冒险/开放世界/魔幻</h1>
+<div class="bookcon">
+    <div class="book">
+        <h2>旷野之息（255h）</h2>
+        <img src="images/Zelda.JPG" alt="zelda" style="width: 320px;height: 180px">
+    </div>
+    <div class="book">
+        <h2>巫师3（285h）</h2>
+        <img src="images/Witcher.JPG" alt="zelda" style="width: 320px;height: 180px">
+    </div>
+    <div class="book">
+        <h2>动物森友会（25h）</h2>
+        <img src="images/animal.JPG" alt="zelda" style="width: 320px;height: 180px">
+    </div>
+    <div class="book">
+        <h2>荒野大镖客2（100h）</h2>
+        <img src="images/reddead.jpg" alt="zelda" style="width: 320px;height: 180px">
+    </div>
+    <div class="book">
+        <h2>健身环大冒险（30h）</h2>
+        <img src="images/ringfit.JPG" alt="zelda" style="width: 320px;height: 180px">
+    </div>
+</div>
+<h1>Call to code.</h1>
+<div class="bookcon">
+    <div class="book">
+        <h2>VScode</h2>
+        <img src="images/VSCODE.png" alt="vscode" style="height: 200px;width: 200px">
+        <a href="https://www.bilibili.com/video/BV1Cu411y7vT?share_source=copy_web">
+            <div class="butt">
+                了解更多
+            </div>
+        </a>
+    </div>
+    <div class="book">
+        <h2>IntelliJ IDEA</h2>
+        <img src="images/idea.png" alt="vscode" style="height: 200px;width: 200px">
+        <a href="https://www.bilibili.com/video/BV1Cu411y7vT?share_source=copy_web">
+            <div class="butt">
+                了解更多
+            </div>
+        </a>
+    </div>
+</div>
 </body>
 </html>
