--- a/learn.html
+++ b/learn.html
@@ -15,29 +15,48 @@
     <li><a href="experience.html">心得</a></li>
     <li><a href="about.html">关于</a></li>
 </ul>
-<h1>大学第一年我研读的专业书</h1>
+<h1>大学第一年我研读的专业书/阅读小结</h1>
 <div class="flex">
     <div>
         <img src="images/cprimer.jpg" alt="CPP">
     </div>
     <div class="yougezi">
-        <div class="name">
-            <h2>C Primer Plus ——查漏补缺/针对研读/适合新手扫盲<br>推荐理由：</h2>
-        </div>
+        <h2>C Primer Plus ——查漏补缺/针对性研读/适合新手扫盲<br>推荐理由：</h2>
         <div class="rec">
-            <p>
-                我学C语言的第一本书，从去年10月开始学习，看得比较慢（请原谅我很蠢），目前将C语言的语法部分看完了，主要集中在前15章。我的个人评价是：透彻、清晰，简单的一个小知识，可以讲出花。只要肯花时间来细细研读某个章节，一定会受益匪浅。就我个人来说，我认为这本书讲的最最最好的地方是<span
-                    class="jiacu">第10章的数组和指针</span>,读完之后我才发现指针和数组的关系是如此的密切！指针配合数组，可以非常灵活地操作数组中的数据。当时花了一天和一个下午专门研究，才通透，迈过了指针这道坎。我认为这是一个里程碑，后面的知识几乎全部都需要用到指针这一基础，举个例子，指针指向字符串、结构体、甚至是文件（需要文件指针），在后续的数据结构和算法的学习过程中，指针是肯定要用到的，那时候才会感知到指针是多么强大，使用的难度是多么大😂<br>
-                <span class="jiacu">踩过的坑以及书的不足：</span><br>
-                1️⃣这本书<span class="jiacu">实在是太厚了</span>，讲的十分详细，所以不建议大家直接像我一样直接拿起来啃😭，需要好好听课之后，记录自己模糊的地方，课后仔细研读；也可以使用一点魔幻的方法速通一遍C，再来看这本书，收获会更大，更能理解本质（我的情况）。<span
-                    class="jiacu">书上的课后习题，非常适合练手来加深印象</span>。<br>2️⃣不能死磕一个地方，需要针对性地学习，某个小地方很可能是翻译出现问题/印刷错误，掌握核心内容就好啦,多敲一敲代码。<span
-                    class="jiacu">纸上得来终觉浅</span>
-            </p>
-            <p>
-
-            </p>
+            我学C语言的第一本书，从去年10月开始学习，看得比较慢（请原谅我很蠢），目前将C语言的语法部分看完了，主要集中在前15章。我的个人评价是：透彻、清晰，简单的一个小知识，可以讲出花。只要肯花时间来细细研读某个章节，一定会受益匪浅。就我个人来说，我认为这本书讲的最最最好的地方是<span
+                class="jiacu">第10章的数组和指针</span>,读完之后我才发现指针和数组的关系是如此的密切！指针配合数组，可以非常灵活地操作数组中的数据。当时花了一天和一个下午专门研究，才通透，迈过了指针这道坎。我认为这是一个里程碑，后面的知识几乎全部都需要用到指针这一基础，举个例子，指针指向字符串、结构体、甚至是文件（需要文件指针），在后续的数据结构和算法的学习过程中，指针是肯定要用到的，那时候才会感知到指针是多么强大，使用的难度是多么大😂<br>
+            <span class="jiacu">踩过的坑以及书的不足：</span><br>
+            1️⃣这本书<span class="jiacu">实在是太厚了</span>，讲的十分详细，所以不建议大家直接像我一样直接拿起来啃😭，需要好好听课之后，记录自己模糊的地方，课后仔细研读；也可以使用一点魔幻的方法速通一遍C，再来看这本书，收获会更大，更能理解本质（我的情况）。<span
+                class="jiacu">书上的课后习题，非常适合练手来加深印象</span>。<br>
+            2️⃣不能死磕一个地方，需要针对性地学习，某个小地方很可能是翻译出现问题/印刷错误，掌握核心内容就好啦,多敲一敲代码。<span
+                class="jiacu">纸上得来终觉浅</span><br>
+            3️⃣需要有不俗的毅力,需要严格规划自己的时间。<br>
+            4️⃣看完本书也成为不了大神，它只是语言教材，真正的重心在数据结构和算法上，所以就不用在本书上停留太久啦。
         </div>
     </div>
 </div>
+<div class="flex">
+    <div>
+        <img src="images/algorithm.jpg" alt="al">
+    </div>
+    <div class="yougezi">
+        <h2>算法图解 ——数据结构简介/算法入门/通俗易懂<br>推荐理由：</h2>
+        <div class="rec">
+            这是我的第一本算法书，当我向班导师汇报学习情况的时候才知道此书竟是<span class="jiacu">双子塔2021理科类借阅榜Top1</span>
+            ，看电子版的我也觉得这本书平易近人。当然这本书中也是粗略介绍了大O表示法，数据结构：比如数组、链表、队列、堆、栈、散列表……书中使用的python演示代码，我不会python但丝毫不影响阅读和练习，我首先在GitHub上找到自己熟悉的语言的算法综合项目，克隆到我的本地仓库（使用IDE非常方便操作），看到一个新的算法，先自己摸索一下，想一想会用到什么工具。再去仓库中查阅具体的实现方式。一边学一边感叹人类是多么智慧（但是俺太笨😂），语言是多么灵活😍根据数据结构的特点针对性设计算法是诀窍，在本书中我学习的第一个算法是<span
+                class="jiacu">二分查找</span>，后来学习了诸多排序算法，我最爱的当然是经久不衰的<span class="jiacu">快速排序</span>，性能卓越的一种排序算法，运用到了分治、和递归的思想。此书不厚，简单易懂，可以激发自己的学习兴趣，亲自动手实现算法<span
+                class="jiacu">很有成就感</span>。
+            <br>
+            <span class="jiacu">踩过的坑以及书的不足：</span><br>
+            1️⃣我认为没什么缺点，如果硬要找缺点的话，只能说这本书不够深入吧，想要进阶需要大量练习或者其他算法书。作为入门书，他的任务已经完成了！<br>
+            2️⃣算法看懂啦，不动手写是学不会也记不住的，还是那句话:<span class="jiacu">纸上得来终觉浅</span>
+        </div>
+    </div>
+</div>
+<a href="afterclass.html">
+    <div class="next">
+        课后➡
+    </div>
+</a>
 </body>
 </html>
