--- a/afterclass.html
+++ b/afterclass.html
@@ -67,7 +67,16 @@
     <div class="book">
         <h2>IntelliJ IDEA</h2>
         <img src="images/idea.png" alt="vscode" style="height: 200px;width: 200px">
-        <a href="https://www.bilibili.com/video/BV1Cu411y7vT?share_source=copy_web">
+        <a href="https://www.jetbrains.com/zh-cn/idea/">
+            <div class="butt">
+                了解更多
+            </div>
+        </a>
+    </div>
+    <div class="book">
+        <h2>Clion</h2>
+        <img src="images/cs.png" alt="vscode" style="height: 200px;width: 200px">
+        <a href="https://www.jetbrains.com/zh-cn/clion/">
             <div class="butt">
                 了解更多
             </div>
