--- a/about.html
+++ b/about.html
@@ -4,15 +4,22 @@
     <meta charset="UTF-8">
     <title>关于</title>
     <link rel="stylesheet" href="css_sheet/pointer.css">
+    <link rel="stylesheet" href="css_sheet/abo.css">
 </head>
 <body>
-<ul>
-    <li style="float:right"><a class="active" href="myinformation.html">个人信息主页</a></li>
-    <li><a href="index.html">回到最初页面</a></li>
-    <li><a href="learn.html">学习</a></li>
-    <li><a href="afterclass.html">课后</a></li>
-    <li><a href="experience.html">心得</a></li>
-    <li><a href="about.html">关于</a></li>
-</ul>
+<div class="container">
+    <span class="yiji">幕后故事</span>
+    <div class="gezi">
+        <div class="element">
+            <a href="junjie.html">关于我</a>
+        </div>
+        <div class="element">
+            <a href="theweb.html">关于此网页</a>
+        </div>
+        <div class="element">
+            <a href="index.html">再看看</a>
+        </div>
+    </div>
+</div>
 </body>
 </html>
