--- a/experience.html
+++ b/experience.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>心得</title>
     <link rel="stylesheet" href="css_sheet/pointer.css">
+    <link rel="stylesheet" href="css_sheet/exper.css">
 </head>
 <body>
 <ul>
@@ -14,5 +15,6 @@
     <li><a href="experience.html">心得</a></li>
     <li><a href="about.html">关于</a></li>
 </ul>
+<span class="yiji">时间紧、任务重</span>
 </body>
 </html>
