--- a/learn.html
+++ b/learn.html
@@ -55,7 +55,7 @@
 </div>
 <a href="afterclass.html">
     <div class="next">
-        课后➡
+        <span class="jiacu">课后➡</span>
     </div>
 </a>
 </body>
