--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
             <a href="theweb.html">关于此网页</a>
         </div>
         <div class="element">
-            <a href="index.html">再看看</a>
+            <a href="myinformation.html">再看看</a>
         </div>
     </div>
 </div>
