--- a/hobby.html
+++ b/hobby.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>关于我</title>
+    <title>业余爱好</title>
     <link rel="stylesheet" href="css_sheet/pointer.css">
     <link rel="stylesheet" href="css_sheet/junjie.css">
 </head>
@@ -14,19 +14,5 @@
     <li><a href="hobby.html">业余爱好</a></li>
     <li><a href="food.html">食物</a></li>
 </ul>
-<div class="container">
-    <span class="yiji">Hola！感谢你来到这里了解我！</span>
-    <div class="gezi">
-        <div class="element">
-            <a href="lastyear.html">过去一年</a>
-        </div>
-        <div class="element">
-            <a href="hobby.html">业余爱好</a>
-        </div>
-        <div class="element">
-            <a href="food.html">食物</a>
-        </div>
-    </div>
-</div>
 </body>
 </html>
