--- a/myinformation.html
+++ b/myinformation.html
@@ -6,6 +6,7 @@
     <!--    可以连接多个CSS样式表-->
     <link rel="stylesheet" href="css_sheet/pointer.css">
     <link rel="stylesheet" href="css_sheet/myinfor.css">
+    <link rel="stylesheet" href="https://libs.baidu.com/fontawesome/4.0.3/css/font-awesome.min.css">
 </head>
 <body>
 <ul>
@@ -75,7 +76,8 @@
                 <div>
                     <span class="xiaoneirong">📬E-mail：</span>linkuandmyu@163.com<br>
                     <span class="xiaoneirong">📞Tel：</span>13972430185<br>
-                    <span class="xiaoneirong">⭐GitHub：</span><a href="https://github.com/languagege">@languegege</a>
+                    <span class="xiaoneirong"><i class="fa fa-github" aria-hidden="true" style="font-size: 27px"></i>GitHub：</span><a
+                        href="https://github.com/languagege">@languegege</a>
                 </div>
                 <hr>
                 <p>🔍 一起交流学习！</p>
