--- a/hobby.html
+++ b/hobby.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>业余爱好</title>
     <link rel="stylesheet" href="css_sheet/pointer.css">
-    <link rel="stylesheet" href="css_sheet/junjie.css">
+    <link rel="stylesheet" href="css_sheet/hobby.css">
 </head>
 <body>
 <ul>
@@ -14,5 +14,104 @@
     <li><a href="hobby.html">业余爱好</a></li>
     <li><a href="food.html">食物</a></li>
 </ul>
+<span class="yiji">💻计算机：</span><br>
+<span class="erji">🔵Call to code</span><br>
+<p>
+    1️⃣<span class="jiacu">程序设计可以算是一门艺术。</span><br>
+    在后端领域，可以领略到不同语言的风格特点。在刚刚开始的阶段，语句还是比较晦涩难懂的，后端不像前端，拥有可视化的成果展示，成果也仅仅可能是控制台的黑框或者IDE的终端，学起来的确是没什么兴趣。但我们无时无刻不在享受着应用程序给我们的日常生活带来极大的便利，让我们的购物、出行、娱乐方式都有了质的飞跃。<span
+        class="jiacu">起步有一定的阵痛期，熬过去就会发现新大陆👍.</span><br>
+    2️⃣<span class="jiacu">我的学习经验.</span><br>
+    1.首先是快速过一遍，了解个大概。快速掌握基础部分，在这个阶段可以<span class="jiacu">好好听课</span> 、或者是看视频学习。讲究的就是快速学习，掌握。然后，就需要拿出<span class="jiacu">靠谱的专业书籍</span>进行深入扫盲、加深印象，除了我推荐的《C
+    P P》,也可以看其他外国作者写的书，基础很强的同学，可以看K&R的《C程序设计语言》（非常著名的Hello world在本书诞生）主要是多写一写代码来感受不同函数、语句的作用，刚开始学习的时候，<span
+        class="jiacu">暂时不建议碰算法</span>,<br>
+    2.当对一门语言的使用方法较为熟悉之后，再来想一想算法，想一想如何用我这门语言来实现。在对语言特征不熟悉的阶段接触高级算法，会劝退一大波人，因为不熟悉语言的一些高级用法，很难看懂算法大神写的源代码，进而丧失了信心。在熟悉一门语言后，才是学习算法的时机。刚开始接触算法，也会很迷茫，就会在心里问为什么要这样设计算法呢？其实算法的设计，需要有<span
+        class="jiacu">数据结构</span>支撑,靠着不一样的数据结构特点，运用不同的算法解决实际问题。<br>
+    3.最后注意不能本末倒置。不能说你会很多语言，你就是编程大神，就比如有人说，我会C\C++\Java\Python\Go\PHP\Swift\OC……（啥都会）这么多高级语言，我就是大牛。其实他目光短浅，是个菜鸟，远远没有get到程序设计的灵魂，程序设计最令人陶醉的是<span
+        class="jiacu">数据结构</span>和<span class="jiacu">算法</span>，精通这两个，哪怕只会一门语言，也是妥妥的大神!
+</p>
+<span class="erji">🔵硬件</span><br>
+<p>
+    1️⃣<span class="jiacu">计算机组成.</span><br>
+    如果你是一名极客或者上学期的信息导论上的好的话，可以很快回忆起计算机五大件：<span class="jiacu">运算器、控制器、存储器、输入、输出</span>。放到现在的生活中呢计算机内部就可以细化为<span
+        class="jiacu">主板、CPU(中央处理器)、GPU(图形处理器、也就是万恶的显卡)、内存(RAM)、外存(硬盘、U盘)、电源</span>等等。这其实与后期学习的课程：计算机组成原理
+    息息相关，身为爱折腾的极客，这些都是基础知识哈。最容易弄混的就是手机的内存和外存，我的手机存储规格是4G+128G，内存是4G，外存才是128G，千万说手机内存有128啦，放到桌面级计算机，128G的内存可以算是非常豪华的配置了，我目前了解到内存最大的个人计算机是苹果公司的顶配Mac
+    Pro，足足有1.5T内存，12通道的128G内存配置，孩子我都馋哭了😍<br>
+    2️⃣<span class="jiacu">性能之巅.</span><br>
+    时代一直在进步，技术一直在更新。<span class="jiacu">我一直比较关注计算性能的发展。</span>
+    过去几十年里，摩尔定律一直不断推动着计算机计算性能的飞速进步，但是现在由于物理极限，摩尔定律逐渐失效。所以现在Intel带头整出了芯粒（chiplet），是下一个时代的芯片发展风口，下一个芯片生态革命。简单来说就是小芯片组成一块大芯片，说起来简单，但实际运用起来牵扯到诸多领域，譬如传输协议啊，制程工艺……就目前来说，使用到的芯粒技术的芯片：Apple
+    silicon的M1 Ultra，搭载M1 Ultra的顶配Mac Studio就已经表现出了不俗的性能，M1 Ultra其实就是两块M1
+    Max通过类芯粒技术“拼接”而来的。我想苹果这一举动又将引领未来的计算芯片设计思路吧。<br>
+    关于芯粒，Intel开始“拉帮结派”组成了一个Ucie联盟Universal Chiplet Interconnect
+    Express”(通用小芯片互连通道)，准备指定下一个时代的芯片标准，很可惜代表我们国家参与的企业只有来自台湾的台积电和日月光。但令我非常疑惑的是截至目前苹果和英伟达并未参与进Ucie，苹果在移动计算芯片世界第一，英伟达在图形处理器上世界第一，他俩在Ucie的缺席属实让Intel很没面子😂.目前一切都是未知数，还是很期待未来科技水平的进一步发展！
+    <br>3️⃣<span class="jiacu">购买类计算机电子产品.</span><br>
+    充分了解硬件的情况下，在选购电子产品的时候会带来巨大的优势。<br>对于买手机，我总结了三个重要知识点：<br><span class="jiacu">1.处理器（SOC，即系统级芯片）：直接决定了性能表现，在性能方面的领头羊是iPhone</span><br>
+    <span class="jiacu">2.屏幕（不是手摸的那块玻璃！）：最直观的体验，目前国产的屏幕表现非常不错，比如iPhone13部分的屏幕就来自国产京东方，但是国内手机厂商喜欢用三星的屏幕，我个人认为三星的屏幕只有旗舰手机上才是正常水平，预算有限的情况下，不要过分追求参数，稳定性才更重要。</span><br>
+    <span class="jiacu">3.操作系统：目前呢做的比较好的是鸿蒙和IOS吧，其他的定制安卓系统也是风格迥异，功能各不相同，购买时可以多了解一下不同系统有哪些不一样的功能吧</span><br>
+    对于购买计算机（笔记本、台式机）的话呢，功课就比较多了，尽量多看看B站的测评视频，主要关注稳定性和售后，性能就不能摆在第一位啦。毕竟计算机要陪伴我们很久！稳定工作才是首位考虑的因素，当然足够极客，动手能力强，也可以追求一下极致性能，但出问题就要自己负责哈哈哈哈哈😂.
+</p>
+<span class="erji">🔵软件</span><br>
+<p>
+    <span class="jiacu">如果硬件是一个强壮的灵魂，那么软件就是这副身体最有趣的灵魂。</span>
+    我经常对国内软件进行批判，点名批评<span class="jiacu">支付宝和QQ</span>
+    。支付宝界面过于繁琐，密集恐惧症看了直呼受不了；另外支付宝红点是我用过软件中最多的，老是各种投资、广告、理财之类的，非常讨厌！每次打开都有几十条未读消息😅.又不是什么关键信息，关闭还很麻烦，给我把开关藏那么深……对于QQ，自从他把<span
+        class="jiacu">虚幻引擎4</span>（Unreal Engine
+    4,著名的游戏引擎，由Epic开发，简称UE4）放进来，我就感觉它要完蛋了。一个好好的IM即时通讯软件，加入一些”臃肿“的功能，反而失去了它的初心，越来越玩不懂了。不仅占用更多的磁盘空间，使用时内存占用也上来了，为了聊个天手机的资源莫名其妙地被吃光……才谈谈UE4，UE4开发出了不少知名电子游戏，非常火爆的吃鸡（PUBG）、方舟：生存进化、盗贼之海、极限竞速：地平线4、最终幻想7重制版都是UE4打造出来的，而我们的QQ用UE4来做QQ秀，我都感叹原来某讯还记得有QQ秀这东西，用UE4打包好强行塞给用户，除非你拒绝版本更新……真的是一言难尽，只能说中国软件还需要成长吧。用户需要的是<span
+        class="jiacu">做的精，而不是做的广的软件</span>。好好优化一项功能，而不是为了追求多而肆意开发多功能，陷入自我满足的漩涡。
+</p>
+<span class="yiji">📚书籍：</span><br>
+<p>
+    除了先前已经提到过的《C P P》和《算法图解》，我还在课后看了一些课外书。第一本是<span class="jiacu">《硅谷钢铁侠》</span>
+    ，讲述的是埃隆·马斯克是如何慢慢走向世界首富的。他是一个实干的实业家，涉足太阳能、电动汽车、航天多个领域，曾经经历过挫折，但最终一步一步克服，有低谷也有顶峰吧。第二本是<span
+        class="jiacu">《三位一体：英特尔传奇》</span>，想看是在B站上简略了解过英特尔这个公司的历史：逐步奠基，X86指令集的诞生……让我更想深入了解这个传奇的公司。后来读了书后才发现这本书主要讲的是诺伊斯、摩尔、格鲁夫之间的爱恨情仇，沙子的身价翻身历史，真的推荐对集成电路和CPU感兴趣的同学们看看这本书，这本书里面也有很多管理学案例，其实管院学子都可以来看看哈.
+</p>
+<span class="yiji">🎮电子游戏:</span><br>
+<span class="erji">⚪塞尔达传说：旷野之息(The Legend of Zelda:Breath of the Wild)</span><br>
+<div class="flex">
+    <div>
+        <img src="images/legend.jpg" alt="zelda">
+    </div>
+    <div>
+        <p>
+            由日本任天堂开发，它是我玩过的第二份开放世界类型的游戏，我只想用一句话评价它：<span class="jiacu">天下第一的游戏很多，但旷野之息是”天“。</span><br>
+            1️⃣无感的引导机制。单单是游戏地图界面，无比清爽，不像其他泯然众人的开放世界满图问号。任天堂通过强大的潜在引导力趋势着 玩家积极探索世界，你总会发现：这地方也用新东西?<br>
+            2️⃣地图交互。得益于出色的 物理引擎和化学引擎，光照烘培仿佛身处真实世界，各种物理规律也会严格遵守(本游戏中 需要大量运用动量定理)来完成游戏目标。<br>
+            3️⃣非线性关卡设计堪称游戏任务设计的天花板。 像完成哪个任务完全取决于你，而且逻辑自洽，相比于其他开放世界游戏的线性剧情， 这才叫是开放。<br>
+            4️⃣画面柔美，清新，自然，天气系统独具一格，令玩家陶醉其中。<br>
+            🔗<a href="https://www.zhihu.com/question/263775878">知乎网友如何评价</a>🔗<a
+                href="https://www.bilibili.com/video/BV1iU4y1L7zf?p=2&share_source=copy_web">唯美的旷野之息</a>
+        </p>
+    </div>
+</div>
+<span class="erji">⚪荒野大镖客2：救赎(Reddead 2:Redemption)</span><br>
+<div class="flex">
+    <div>
+        <img src="images/red2.jpg" alt="reddead2" width="230px" height="330">
+        <img src="images/morgan.jpg" alt="morgan" width="230px" height="330px">
+    </div>
+    <div>
+        <p>
+            讲述了一位西部牛仔亚瑟·摩根的救赎之路，那时候肺结核是绝症。由美国R星开发。<br>
+            “Mr. Morgan,
+            无论你以前做过什么，可是每当你出现，你总是笑容洋溢，帮助着别人，这才是我眼中的你。——游戏中的某位修女对主角的评价”很难想象摩根先生这么一位坏事做尽的亡命之徒会获得这样的评价。RDR2是我玩过最残酷的游戏，倒不是说因为是一个主角必死的结局，而是我需要眼睁睁的看着一个无比熟悉亲切的人渐渐步入死亡的笼罩，可无能为力。无论你做什么，亚瑟都会一天比一天更辛苦，无从挽留，这是我在任何游戏都从来没有过的体会。游戏里面没有刻意的去渲染亚瑟的病痛，隐忍的亚瑟也对自己的肺结核只字不提。
+            但是从第五章开始，看完医生后我我想给亚瑟买一件舒服点的衣服，亚瑟充血的双眼，紫青的双颊，让你知道再也回不去了。泡澡的时候，他呼吸困难，胸部明显的起伏，脸上伴随着强忍的痛楚，我很难想象他患病的每一天是要用多大的魄力去忍耐的，然而每一天，我们的亚瑟都做了很多，为帮派，为别人，却从来没为自己做过什么。Red
+            Dead Redemption，在亚瑟身上我看到这三个字的缘起。——知乎网友<br>
+            换做我的话，我认为这是第一份足以让大男子汉落泪的游戏，在亚瑟最后一个任务重，相信玩过的同学，那个任务都是强忍着泪水去完成的，那是亚瑟最后一个救赎。摩根先生的人物塑造十分的丰满，在RDR2中身为主角的他被刻画的有血有肉。坏事我们做，好事我们也做，但究竟成为好人还是坏人，需要我们自己抉择。摩根先生得知自己的肺结核后不由得想起自己的过去，自己犯的错误，他一直努力这做善事，只为救赎。后期听到的最多的一句话就是”You
+            are a good man,Mr. Morgan“但是亚瑟一直不认可自己是个好人，这也是内心中对亚瑟地折磨吧……<br>
+            这个游戏我不想玩第二遍，因为我怕我不忍心玩下去，摩根先生就好像真的存在一般，这款电子游戏足以被载入史册，摩根先生绝对会是电子游戏历上名垂千古！”杀死我的，不是当年凶狠射向我的子弹，也并非无数次在马背上的危险坠落，不过是区区几口无足重轻的咳嗽罢了。——亚瑟·摩根“夕阳下奔跑的马匹，手中滚烫的左轮，到你身后的是整个时代！<br>
+            🔗<a href="https://www.zhihu.com/question/56553986">知乎网友的评价</a>🔗<a
+                href="https://www.bilibili.com/video/BV1zo4y1S717?share_source=copy_web">怀念摩根先生</a>🔗<a
+                href="https://www.bilibili.com/video/BV1TJ411i7u9?share_source=copy_web">You're a good man</a>
+        </p>
+    </div>
+</div>
+<span class="erji">💭对电子游戏的思考</span><br>
+<p>
+    时间过的太快了，到今天为止我的switch已经陪了我（和我的好朋友们）已经一年了.我在上面玩了不少优秀的作品，画面精良（在这个平台可能不太好），剧本出色，关卡设计精妙，人物丰满，配乐顶尖……塞尔达有250h，巫师3有285h，马丽欧网球40h，马车8有30h，马趴有20h（这个只能和朋友们多人），健身环也有20h，动森有25h，还有哈迪斯，死亡细胞（太难退坑不适合我）大大小小685h的游玩时间，平均一天玩1.87小时.休闲的玩起来特别舒服，硬核的玩起来刺激的不得了。也是我去年休息时间中最开心，最放松的一段时光。一年后，他多了很多道划痕，又一次带出去和老友玩给屏幕磕了个小坑🤣，但是他真就是个玩具，看到磕磕碰碰的地方反而更能记住那些欢笑的时光。🥳目前全球销量已经突破1亿啦，但是生命周期仍然有3年左右，期望未来3年任天堂能带来更多优秀的第一方作品，第三方厂商也要加油哇，毕竟你们摆烂一年了！今天也是敲码把键盘敲坏了才休息会，发表一点感触，好在重启解决了（估计是长时间工作产生了静电，大家不要像我一样一直坐在电脑前哇！自己受不了电脑也受不了）近200行，差不多有30多行卡了我很久…有一些在老朋友帮助顺利解决～来到大学，休息的时间并不充裕，水课作业多杂慢难，玩游戏的时间也少了，但总有长假啊哈哈哈哈哈。最后也希望中国电子游戏能早日登上世界舞台，同欧美日平起平坐！把优秀的中国故事讲给外国人听！而不是让外国人把中国故事讲给我们听！希望全球开发者，不论是开发啥的，都不要把政治色彩带到GitHub，背弃开源精神；也不要带到电子游戏里面，不要老想着这种没自信的方式来辱华（FIFA），辱俄（COD），甚至侮辱亚裔人种！休想用这种低贱的“政治正确”讨好媒体，让自己的作品（💩💩）得奖！
+    今天看到我这条就早点休息吧各位！生活学习不易！——2022.3.5我的朋友圈,算是我的憋了很久的话了吧~<br>
+</p>
+<p class="p">
+    前文提到到了游戏引擎，现在的现代化游戏都是用游戏引擎开发的，显然不是一行一行代码写出来的。游戏引擎90%以上由C++开发，原因就在于C++贴近底层，运行效率高，且支持面向对象特性，可以为开发带来便利。大家喜欢玩的《王者荣耀》、《原神》、《永劫无间》都是使用<span
+        class="jiacu">unity3D</span>开发的，一款性价比很高的游戏引擎。像Zelda、RDR2、巫师3等是使用的自研引擎。国产游戏引擎还在萌芽阶段，却发生了下面这个令人惋惜的事。<br>
+</p>
 </body>
 </html>
