--- a/lastyear.html
+++ b/lastyear.html
@@ -17,22 +17,25 @@
 <span class="yiji">🌝满意的事：</span><br>
 <span class="erji">🔘健康、平稳、充分利用第一年</span>
 <p>
-    这里的<span class="jiacu">健康、平稳</span>其实是：<br>1️⃣<span class="jiacu">去年没有生病。</span>
+    这里的<span class="jiacu">健康、平稳</span>其实是：<br>1️⃣<span class="jiacu">去年没有生病。</span><br>
     我认为这是个不错的成就，因为疫情，看病流程变得十分繁琐，所以我平时也十分注重身体的保养。去年的舍友有恙在身时，我只是流鼻涕俩天就完全恢复了，拥有健康的身体是最重要的👍<br>
-    <br>2️⃣<span class="jiacu">基本没有熬夜/熬夜次数屈指可数。</span> 在工作日，我的就寝时间是：<span class="jiacu">23:30-6:40</span>
+    <br>2️⃣<span class="jiacu">基本没有熬夜/熬夜次数屈指可数。</span><br> 在工作日，我的就寝时间是：<span class="jiacu">23:30-6:40</span>
     ,如果没有万恶的早前我会在7:20起来。在周末，我的就寝时间是：<span class="jiacu">23:30-7:30</span>，我最喜欢周末，周末可以做很多自己想做的事情，所以懒觉还可以少睡一点😆，所以我就把宝贵的时间花在建设自身上。我依稀记得上次熬夜到很晚是去年的中秋（大概），很早就洗完澡后打开了游戏机，接上我的显示器，一直玩<span
         class="jiacu">巫师3</span>二周目，血与酒的DLC大结局部分，本来准备一口气通关，结果我预判失误，剧情又精彩又很长，搞到1:30还没结局！(这游戏是真的精彩😂)迫于压力睡觉去了，后来抽时间在白天才通关哈哈哈哈，结束的时候玩总共到285h（两遍），最后无情地卖掉了它。前后花了30块钱，还是很划算的。期末复习我也不熬夜，白天折腾一天后晚上实在是精力不足。<br>
-    <br> 3️⃣<span class="jiacu">三餐吃好</span>三餐作为人类的能量来源，是健康身体的保障。我觉得咱们学校食堂的饭菜其实做的很不错，毕竟每人补贴<span class="jiacu">8块</span>
+    <br> 3️⃣<span class="jiacu">三餐吃好</span><br>三餐作为人类的能量来源，是健康身体的保障。我觉得咱们学校食堂的饭菜其实做的很不错，毕竟每人补贴<span
+        class="jiacu">8块</span>
     （数据来源于崔榕老师），我直到现在都还没有在武汉点过外卖，一是疫情，我害怕病毒，二是怕辛辛苦苦等待的外卖被扒窃。室友外卖被偷两次又增加了我对学校点外卖的恐慌。所以大家点外卖还是提前蹲守比较好。三餐吃好，健康少不了！<br><br>
     这里的<span class="jiacu">充分利用</span>更多的在我的<span class="jiacu">心得</span>页面中解释。点击右上角<span class="jiacu">个人信息主页</span>可以再次看看我的心得
 </p>
 <span class="erji">🔘善于了解诸多新事物、敢于迈出诸多第一步</span>
 <p>
-    1️⃣<span class="jiacu">了解新事物。</span>这个世界很精彩，很多我们未曾接触到的新事物等待着我们。在信息时代的我们很幸运，资源获取非常便捷。光说可能很难感受到，我来举几个栗子：1.文本处理工具不只是有类Word型软件。在以后论文编写用Word可能会很难受，这时候就需要其他工具，比如笔记大赛中提到的Typora，或者是LaTex都非常适合写公式，比Word要高效；2.记笔记。不仅可以用手写（纸质或电子），其实电脑也是记笔记的一把好手，我目前最喜欢用Vscode来记笔记（我爱万能的vscode），记录在markdown文件中，特别是有关程序设计的课程，我真的<span
+    1️⃣<span class="jiacu">了解新事物。</span><br>这个世界很精彩，很多我们未曾接触到的新事物等待着我们。在信息时代的我们很幸运，资源获取非常便捷。光说可能很难感受到，我来举几个栗子：1.文本处理工具不只是有类Word型软件。在以后论文编写用Word可能会很难受，这时候就需要其他工具，比如笔记大赛中提到的Typora，或者是LaTex都非常适合写公式，比Word要高效；2.记笔记。不仅可以用手写（纸质或电子），其实电脑也是记笔记的一把好手，我目前最喜欢用Vscode来记笔记（我爱万能的vscode），记录在markdown文件中，特别是有关程序设计的课程，我真的<span
         class="jiacu">强烈推荐</span>在<span class="jiacu">程序设计课堂上用markdown记笔记👍</span>，大家应该都很苦恼，非常重要的代码片段不想错过，手写太慢，也不美观，不支持语法高亮,那么markdown就是一个非常强大的工具，并且<span
         class="jiacu">刘启川</span>学长的课堂笔记就有一部分疑似用到markdown专门的代码块，支持多种语言，方便程序员记笔记。网上教程很多，也不难。3.操作系统。不只是只有Windows，还有类Unix系统的Mac和Linux，都是非常优秀的操作系统,最适合用来学习操作系统课程的是Linux系统，而且开源，安全，付费软件少，不像其他两个商业系统。这里就不继续展开讲啦。感兴趣也可以去尝试一下！4.一台计算机可以控制连接多台显示器（我经常这样做）在🔗<a
         href="about.html">关于</a>界面的背景，就是我的桌面。很容易发现有两个显示屏，一个是我的计算机自带的，另一个是外接的，同时使用，办事效率更高。关于连接显示器，需要了解主流的视频信号传输协议，HDMI、DP等等，又可以增加一些信息技术的知识啦！对多屏协同感兴趣的同学可以了解一下，很香~5.GitHub，全球最大的交友网站！<br><br>
-    2️⃣<span class="jiacu">迈出第一步。</span>了解了这么多新事物，不迈出第一步也没什么作用。多多尝试，我也是在本次期末作业的完成过程中现学现用markdown语法来记录我的开发过程、在GitHub上开始第一个项目、慢慢熟悉在IDE中使用Git版本控制工具，这一下子我就跨出了三个第一步！我对Linux十分感兴趣，由于需要对电脑动刀子，我准备在暑假进行探索（为了安全）；对于Git，还要学习命令行的使用方法，又是一个个值得期待的第一步呢！虽然每个人的情况、兴趣出发点不一样，但<span
+    <span class="jiacu">以下是markdown笔记演示,左为源码，右为实际效果</span> <br><img src="images/mdd.png" alt="markdown"
+                                                                    style="width: 100%">
+    2️⃣<span class="jiacu">迈出第一步。</span><br>了解了这么多新事物，不迈出第一步也没什么作用。多多尝试，我也是在本次期末作业的完成过程中现学现用markdown语法来记录我的开发过程、在GitHub上开始第一个项目、慢慢熟悉在IDE中使用Git版本控制工具，这一下子我就跨出了三个第一步！我对Linux十分感兴趣，由于需要对电脑动刀子，我准备在暑假进行探索（为了安全）；对于Git，还要学习命令行的使用方法，又是一个个值得期待的第一步呢！虽然每个人的情况、兴趣出发点不一样，但<span
         class="jiacu">迈出第一步真的至关重要!</span>
 </p>
 <span class="erji">🔘帮助他人</span>
@@ -43,12 +46,30 @@
 <span class="yiji">🌚遗憾的事：</span><br>
 <span class="erji">🔴很少出去，未加入社团</span>
 <p>
-    客观原因40%主观原因%60吧疫情限制出校，课后生活的活动就比较单一。我就一直看书，Code，看书，玩游戏……关于社团，让我感兴趣的并不多，之前浅浅地尝试打辩论赛，发现比较占用我的私人时间，就不想打了。非常幸运的是在辩论队二面的时候认识了软工实验班的同学，俺俩都在二面挨批😂，同病相怜。真希望我的课后生活能丰富一点😭
+    客观原因40%主观原因%60吧疫情限制出校，课后生活的活动就比较单一。我就一直看书，Code，看书，玩游戏……关于社团，让我感兴趣的并不多，之前浅浅地尝试打辩论赛，发现比较占用我的私人时间，就不想打了。非常幸运的是在辩论队二面的时候认识了软工实验班的同学，俺俩都在二面挨批😂，同病相怜。真希望我的课后生活能丰富一点😭.平时在家我也就很少出去和小伙伴们玩，上次聚会还是在我的生日<span
+        class="jiacu">2月14日（第一台电子计算机诞生的日子/情人节）</span> 把小伙伴们拉到我家一起吃大火锅，打了一下德州扑克，玩了玩超级马里欧派对。
 </p>
 <span class="erji">🔴难以静下心来做自己不喜欢的事</span>
 <p>
     一种个人选择吧，我认为真正的人才就是可以把自己不喜欢做的事情做的很好的一批人，就像很多共和国的建设者，都是为了救国学习自己并不擅长的领域并且颇有建树，真的很佩服他们，向他们致敬！<br>
-    反观我，遇到不喜欢的事情，就喜欢摆烂，或者草草了事，毕竟总想着把事情弄完，做自己的事情。就比如许多奇怪的课程作业：拍视频、画海报、写某某报告书……以后的日子希望我能摆正我的态度😞
+    反观我，遇到不喜欢的事情，就喜欢摆烂，或者草草了事，毕竟总想着把事情弄完，做自己的事情。就比如许多奇怪的课程作业：拍视频、画海报、写某某报告书……我就经常不做。以后的日子希望我能摆正我的态度😞
 </p>
+<span class="erji">🔴没有打想打的比赛</span>
+<p>
+    <span class="jiacu">ACM/ICPC和蓝桥。</span>实力不足没去参加这两个算法大赛，我认为夯实基础很重要，所以第一年先给自己打好基础吧。蓝桥还是可以试一试，ACM/ICPC那是国际顶级比赛，需要组队。民大也有ACM队，<span
+        class="jiacu">成绩是6银💿8铜📀.</span> 不久前民大也开展了ACM个人校级比赛选拔人才，我也只是观望了一下😟。大二准备打一下蓝桥，还有很长时间准备吧。ACM就在梦里参加吧😂
+</p>
+<span class="erji">🔴没有锻炼好身体</span>
+<p>
+    1️⃣<span class="jiacu">体测没过80！</span><br>
+    我是真的会屑……😭这就丧失了很多评优的机会，千万别学我！<br>
+    2️⃣<span class="jiacu">平时锻炼不足</span><br>
+    平时放假在家我肯定会天天玩玩<span class="jiacu">健身环大冒险</span>，拿着个圈跑步、深蹲、高抬腿、拉伸……挺不错的一款电子游戏，每次玩个20分钟就可以感受到一定的效果。结果到大学来之后啊，个人空间比较紧张，就干脆没带来了，然后我就丧失了运动的动力😭
+</p>
+<a href="hobby.html">
+    <div class="container">
+        业余爱好 ▶
+    </div>
+</a>
 </body>
 </html>
