--- a/food.html
+++ b/food.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>食物</title>
     <link rel="stylesheet" href="css_sheet/pointer.css">
-    <link rel="stylesheet" href="css_sheet/junjie.css">
+    <link rel="stylesheet" href="css_sheet/hobby.css">
 </head>
 <body>
 <ul>
@@ -14,5 +14,23 @@
     <li><a href="hobby.html">业余爱好</a></li>
     <li><a href="food.html">食物</a></li>
 </ul>
+<span class="yiji">🍹饮料:</span><br>
+<p>
+    <span class="erji">☕咖啡</span><br>
+    平时挺爱喝的，差不多周末早上或者下午都会自己来上一杯手冲咖，不加糖才是最原始，最爽口的味道，喝过之后<span class="jiacu">精神倍儿棒</span>
+    。很多同学觉得喝了咖啡之后没有效果，很可能是因为使用方法不对，来这里看看兔八哥的科普视频：🔗<a
+        href="https://www.bilibili.com/video/BV1t3411e7PA?share_source=copy_web">为什么喝了咖啡还是困</a>。我更喜欢和中度、深度烘焙，最近尝试了一下浅烘。当然每次手冲咖啡都可以锻炼冲泡的技术，像以前，我经常把<span
+        class="jiacu">冲糊了</span> ，香味完全没有了，只剩糊味😵.现在冲的次数多了，懂得控制水温、保留咖啡的风味啦！依稀记得在高中的时候，第一次在自己冲的耶加雪菲中品到了<span
+        class="jiacu">茉莉花香、柑橘的酸味（真的不是心理作用，能不能尝出来因人而异）</span>，从那以后我就对咖啡无法自拔了😂，最近喝的耶加雪菲中，有红酒的香味，还不错，但还是太酸了，不太喜欢。<br>
+    当然民大的瑞幸咖啡店中出了新品我还是会去尝一尝的，现磨的味道挺不错，但还是加了点牛奶和糖让口感更醇厚，讨好顾客吧。比如最新的<span class="jiacu">椰云拿铁</span>还是比较创新的，可以尝试一下。其他的产品，我真的喝不惯生椰系列，喝了喉咙如同吞了碳，不知道大家有没有类似的”症状“。<br>
+    喝咖啡其实不仅可以帮助我们提神，其实另一个感知极强的效果是<span class="jiacu">让你上厕所的次数急剧增加。</span>主要是咖啡因的作用，空腹摄入咖啡因刺激胃部，并且咖啡因自带利尿属性，所以考试之前不要喝！下午上三节课的时候不要喝！
+    <br><span class="erji">🍷红酒</span><br>
+    其实没什么，红酒是<span class="jiacu">最健康的酒</span>。喝红酒可以软化血管，降低心血管疾病的发病率，而且独特的酒香和恰当的酸度，是相当可口的，当然酒精度的不同喝起来的顺畅度也会不一样。烈一点的酒更难下咽，所以我更喜欢度数不高的。
+</p>
+<a href="theweb.html">
+    <div class="container">
+        关于此网站
+    </div>
+</a>
 </body>
 </html>
