--- a/hobby.html
+++ b/hobby.html
@@ -62,7 +62,11 @@
 <p>
     除了先前已经提到过的《C P P》和《算法图解》，我还在课后看了一些课外书。第一本是<span class="jiacu">《硅谷钢铁侠》</span>
     ，讲述的是埃隆·马斯克是如何慢慢走向世界首富的。他是一个实干的实业家，涉足太阳能、电动汽车、航天多个领域，曾经经历过挫折，但最终一步一步克服，有低谷也有顶峰吧。第二本是<span
-        class="jiacu">《三位一体：英特尔传奇》</span>，想看是在B站上简略了解过英特尔这个公司的历史：逐步奠基，X86指令集的诞生……让我更想深入了解这个传奇的公司。后来读了书后才发现这本书主要讲的是诺伊斯、摩尔、格鲁夫之间的爱恨情仇，沙子的身价翻身历史，真的推荐对集成电路和CPU感兴趣的同学们看看这本书，这本书里面也有很多管理学案例，其实管院学子都可以来看看哈.
+        class="jiacu">《三位一体：英特尔传奇》</span>，想看是在B站上简略了解过英特尔这个公司的历史：逐步奠基，X86指令集的诞生……让我更想深入了解这个传奇的公司。后来读了书后才发现这本书主要讲的是诺伊斯、摩尔、格鲁夫之间的爱恨情仇，沙子的身价翻身历史，真的推荐对集成电路和CPU感兴趣的同学们看看这本书，这本书里面也有很多管理学案例，其实管院学子都可以来看看哈.<br>
+    这里我想过细地聊一聊我正在看的一本书：<span class="jiacu">《计算之魂》</span><br>
+    这本书，讲述了各种计算机理论和算法的灵魂，可以帮助读者全方位，深刻地了解计算机科学，培养一种善于用计算机解决问题的新的思维方式。这种方式被本书的作者吴军博士称之为”计算思维“在我的阅读过程中，我感受到人类思维和计算思维上最大的区别在于：人类的思维是自底向上的，通过一些具体的例子总结出一些规律性的方法，这种称之为”递推“的思维方式，但是采用计算机解决问题，通常需要自顶向下的思维方式，即把一个复杂的大问题，分解为小问题,解决了小问题，大问题也就迎刃而解了，这种思维方式成为”递归“。这种思维方式十分利于我们找到复杂问题的答案。这么说可能不是很理解，我就借用书中一个小小的案例来介绍一下递归的优势。<br>
+    <span class="question">案例：抢20<br>你和一个对手来做一个游戏。你们其中的一个人先从1和2中挑选一个数字，另一个人则在对方的基础上选择加1或者加2。然后又轮到先前的人，你或者他可以再次选择加1或者加2.之后双方交替地选择加1或者加2，谁正好加到20，谁就赢了。请问你有什么策略保证一定能赢？
+</span>提示：把大问题分解成小问题，解决小问题即解决了大问题（递归）🔗<a href="ans.html">解析与答案</a>
 </p>
 <span class="yiji">🎮电子游戏:</span><br>
 <span class="erji">⚪塞尔达传说：旷野之息(The Legend of Zelda:Breath of the Wild)</span><br>
@@ -112,6 +116,16 @@
 <p class="p">
     前文提到到了游戏引擎，现在的现代化游戏都是用游戏引擎开发的，显然不是一行一行代码写出来的。游戏引擎90%以上由C++开发，原因就在于C++贴近底层，运行效率高，且支持面向对象特性，可以为开发带来便利。大家喜欢玩的《王者荣耀》、《原神》、《永劫无间》都是使用<span
         class="jiacu">unity3D</span>开发的，一款性价比很高的游戏引擎。像Zelda、RDR2、巫师3等是使用的自研引擎。国产游戏引擎还在萌芽阶段，却发生了下面这个令人惋惜的事。<br>
+    <br><span class="jiacu">”我有一个梦想，有一天，西游记能出ACT，打神弑佛，那绝对比战神带感。 我有一个梦想，有一天，上海滩能出沙盒游戏，而不是玩《GTA》感受美国梦，亦或是玩《热血无赖》体验国外公司强行塞给我们的“中国文化”。 我有一个梦想，有一天，不少3A大作不需汉化，因为是我们自己的游戏。 国产不倒，单机永存~“——浅墨_毛星云 2013-4-18 来自weibo.com<br>
+</span>
+    <br>毛星云（1991年-2021年12月11日），网络ID“浅墨”，90后，微软最有价值专家；腾讯游戏Lead Engine Programmer，即<span class="jiacu">引擎开发组组长</span>。南京航空航天大学航天学院2013级硕士研究生，中国2013年度十大杰出IT博客作者，与清华大学出版社签约出版《逐梦旅程：Windows游戏编程之从零开始》。2015年，于电子工业出版社博文视点事业部出版了《OpenCV3编程入门》。
+    <br>2021年12月11日，毛星云年轻的生命竟止步于30岁，万千玩家终究没能见到神级国产3A大作，当他冲出窗外的那一刻，不仅仅是他的生命，随之飘落的是破碎的梦想。一位开发大神就此陨落……<br>
+    但在网络上总有人幸灾乐祸，说着：<span class="jiacu">"祸害人的家伙终于*了"</span>看到这种消息，我无语凝噎。可能那些人看到的仅仅是一个游戏制作者自尽，并觉得他罪该万死，而我看到的是一位游戏引擎开发天才因为郁郁不得志而轻生，我们失去的是一个宝贵的人才而不是一个那些人口中的”罪人“。亦或是<span
+        class="jiacu">那些人仅仅肤浅地认为游戏引擎只能用来做游戏，而不能应用于影视合成、广告与实况、建筑3D建模、动画、工业、全息投影、虚拟现实(VR)、自动驾驶场景模拟……</span>引擎本来也是我们国家的弱项，一位开发国产自研引擎的人才陨落，却遭来如此恶毒的话语。电子游戏是一个综合类文化产品，集成美术、价值观、剧本、音乐等诸多元素，现在提到GTA就能想到美国、提到马里欧就能想到日本，就足以看出电子游戏的潜在的意识形态的输出，我们国家现在缺少的就是这样的文化产品，而电子游戏是文化的产物，也是一种文化的载体。<br>
+    大神离开了我们，但我们一直都记得大神的梦想。大神梦想西游记能出ACT(动作游戏)，《黑神话：悟空》正在加班加点制作，使用UE5进行开发，虽然没有用到国产自研引擎，但我们都期待着它<span class="jiacu">成为我们中国第一份有头有面的3A单机大作，扬眉吐气！</span>国产之路还需要时间，让我们一起期待！
 </p>
+<a href="food.html">
+    <div class="container">食物</div>
+</a>
 </body>
 </html>
