--- a/myinformation.html
+++ b/myinformation.html
@@ -23,8 +23,8 @@
     <div id="touxiang">
         <img src="images/myhead.png" style="height: 200px;width: 200px " alt="myhead">
         <h1>喻君杰</h1>
-        <h2>🎓学校：中南民族大学</h2>
-        <h2>🏠籍贯：湖北省荆州市</h2>
+        <h3>🎓学校：中南民族大学</h3>
+        <h3>🏠籍贯：湖北省荆州市</h3>
     </div>
     <!--    右边内容盒子-->
     <div id="youneirong">
@@ -77,7 +77,7 @@
                     <span class="xiaoneirong">📬E-mail：</span>linkuandmyu@163.com<br>
                     <span class="xiaoneirong">📞Tel：</span>13972430185<br>
                     <span class="xiaoneirong"><i class="fa fa-github" aria-hidden="true" style="font-size: 27px"></i>GitHub：</span><a
-                        href="https://github.com/languagege">@languegege</a>
+                        href="https://github.com/languagege"><span class="hei">@languegege</span></a>
                 </div>
                 <hr>
                 <p>🔍 一起交流学习！</p>
