--- a/theweb.html
+++ b/theweb.html
@@ -2,9 +2,55 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>关于此网页</title>
+    <title>关于此网站</title>
+    <link rel="stylesheet" href="css_sheet/hobby.css">
+    <link rel="stylesheet" href="css_sheet/food.css">
 </head>
 <body>
-
+<div class="align"><h1>『网站概述』</h1></div>
+<h2>🔷网站主题</h2>
+<p>我的第一年大学</p>
+<h2>🔷网站风格与设计理念</h2>
+<p>
+    网站风格以简介、大方为主，设置了短小精悍的特效，都是我课后学习，熟练掌握的。对于高级特效，我并未系统性学习，所以整个网站并未使用JavaScript进行开发。<br>
+    网站设计理念：华丽的特效千篇一律，有趣的内容万里挑一。本站开发过程中一直秉持着内容>特效的设计理念.
+</p>
+<h2>🔷开发工具</h2>
+<p><img src="images/storm.png" alt="webstorm" width="20px" height="20px">Webstorm 2022.1-教育许可证、画图3D<br>
+    Webstorm 2022.1负责网页源代码编写以及上传至FTP服务器，画图3D负责进行图片素材的处理
+</p>
+<h2>🔷网页元素</h2>
+<h3>🔸文本</h3>
+<p>
+    90%以上是自我的感悟，10%一下来自知乎、澎湃新闻、微博，使用后均已注明出处。大部分文本都是我在过去一年的心得体会，也算是我的一个倾诉的空间吧。其中也有很多关于学习上、生活上的经验，供大家参考，看完全站内容是很不容易的，谢谢大家的支持！也希望本网站能对大家有所帮助！有问题也可以联系我哈。
+</p>
+<h3>🔸图片</h3>
+<p>
+    图片都是我精挑细选的，背景图与设计理念相同，简洁大方不失优雅；头像等其他素材来源于网络。
+</p>
+<h3>🔸emoji</h3>
+<p>
+    来自于GitHub上的项目，该项目收集并整理了网站常用的emoji，项目连接：🔗<a href="https://github.com/caiyongji/emoji-list">emoji-list</a>
+</p>
+<h3>🔸用户交互</h3>
+<p>
+    <img src="images/ind.png" alt="daohang" width="100%">
+    主要是导航栏的使用，主要的页面均提供下一页的跳转按钮，内部跳转设有跳回按钮；文本框背景设置为透明，在用户的指针移动到文本框时，背景颜色透明度消失，方便用户阅读
+</p>
+<h3>🔸使用技术</h3>
+<p>
+    CSS中DIV的flex布局，伪类hover的简单运用。
+</p>
+<h2>🔷结语</h2>
+<p>
+    本站源代码已在GitHub上开源，欢迎大家提交建议，或者是下载到本地进行浏览，如果觉得该项目有点意思，可以点一点Star哈！大家一起贯彻开源精神，共同进步！GitHub项目连接：🔗<a
+        href="https://github.com/languagege/My-First-year-of-College">我的第一个项目</a>
+</p>
+<div class="align"><h1>感谢各位来到本站！</h1></div>
+<a href="about.html">
+    <div class="container">
+        幕后故事
+    </div>
+</a>
 </body>
 </html>
